tests/errors/semantic/non_blocking/REPEAT_ANNOTATION.py
# Variable has been declared multiple times
# pylint: disable=missing-function-docstring, missing-module-docstring, missing-class-docstring

a : int = 10
a : float = 30.0
